--- a/package.json
+++ b/package.json
@@ -74,5 +74,5 @@
     "version": "git add -A",
     "postversion": "git push origin --tags"
   },
-  "version": "1.8.0"
+  "version": "1.9.0-alpha.1"
 }
