--- a/package.json
+++ b/package.json
@@ -21,8 +21,7 @@
     "ioredis": "^3.2.2",
     "moment": "^2.29.1",
     "moment-timezone": "^0.5.33",
-    "node-fetch": "^2.6.1",
-    "redis": "^2.8.0"
+    "node-fetch": "^2.6.1"
   },
   "description": "Smart Theater API",
   "devDependencies": {
@@ -39,7 +38,6 @@
     "@types/moment-timezone": "^0.5.12",
     "@types/node": "^8.10.66",
     "@types/node-fetch": "^2.5.8",
-    "@types/redis": "^2.8.28",
     "@types/request": "^2.48.5",
     "@types/request-promise-native": "^1.0.17",
     "mocha": "^3.5.3",
